Fix side nav overlay z-index.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -178,3 +178,7 @@ pre.highlight:before {
 code {
   border-left: 4px solid #00a3c2;
 }
+
+#sidenav-overlay {
+  z-index: 996;
+}
